fix image alignment

--- a/CSS/style_main.css
+++ b/CSS/style_main.css
@@ -32,6 +32,7 @@ p {
 }
 .left {
   float: left;
+  text-align: right;
   }
 .right {
   float: right;
